--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -536,16 +536,27 @@ nav .navB {
   margin: 28px 0 28px 0;
 }
 
+#proyectos .contenedorCards .card5 {
+  margin-top: -70px;
+}
+
 #proyectos .contenedorCards .card1, #proyectos .contenedorCards .card4 {
-  margin-top: 176px;
+  margin-top: 106px;
 }
 
 #proyectos .contenedorCards .card3, #proyectos .contenedorCards .card6 {
-  margin-top: 112px;
+  margin-top: 42px;
+}
+
+#proyectos .contenedorCards .underline {
+  font-size: 18px;
+  font-weight: 400;
+  color: #3FAF67;
+  text-decoration: underline;
 }
 
 @media (max-width: 827px) {
-  #proyectos .contenedorCards .card1, #proyectos .contenedorCards .card3, #proyectos .contenedorCards .card4, #proyectos .contenedorCards .card6 {
+  #proyectos .contenedorCards .cards {
     margin-top: 0;
   }
 }
@@ -714,7 +725,19 @@ nav .navB {
   max-width: 508px;
 }
 
-@media (max-width: 551px) {
+@media (max-width: 1052px) {
+  #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
+    max-width: 400px;
+  }
+}
+
+@media (max-width: 828px) {
+  #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
+    max-width: 256px;
+  }
+}
+
+@media (max-width: 600px) {
   #p-servicios #arquitecturaGeneral {
     padding: 58px 16px 64px 16px;
   }
@@ -727,6 +750,7 @@ nav .navB {
   #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
     margin-bottom: 31px;
     margin-right: 0;
+    max-width: 328px;
   }
 }
 
@@ -764,13 +788,31 @@ nav .navB {
   margin-top: 104px;
 }
 
-@media (max-width: 720px) {
-  #p-servicios #renovar .imagen .contenedorImagen :first-child {
-    margin-top: 0;
+@media (max-width: 1052px) {
+  #p-servicios #renovar .imagen .contenedorImagen img {
+    max-width: 400px;
   }
 }
 
-@media (max-width: 551px) {
+@media (max-width: 828px) {
+  #p-servicios #renovar .imagen .contenedorImagen :first-child {
+    margin-top: 0;
+  }
+  #p-servicios #renovar .imagen .contenedorImagen img {
+    max-width: 352px;
+  }
+}
+
+@media (max-width: 740px) {
+  #p-servicios #renovar .imagen .contenedorImagen :first-child {
+    margin-top: 0;
+  }
+  #p-servicios #renovar .imagen .contenedorImagen img {
+    max-width: 256px;
+  }
+}
+
+@media (max-width: 600px) {
   #p-servicios #renovar .imagen {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1003,6 +1045,7 @@ body {
 }
 
 .proyecto .masProyectos .contenedorCards {
+  margin-bottom: 77px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1070,7 +1113,7 @@ body {
 }
 
 .proyecto .masProyectos .contenedorCards h5 {
-  margin-top: 20px;
+  margin: 28px 0 28px 0;
 }
 
 .proyecto .masProyectos .contenedorCards .card1 {
@@ -1082,6 +1125,9 @@ body {
 }
 
 @media (max-width: 767px) {
+  .proyecto .masProyectos h3 {
+    font-size: 28px;
+  }
   .proyecto .masProyectos .contenedorCards .card1, .proyecto .masProyectos .contenedorCards .card3 {
     margin-top: 0;
   }
