Añadir nosotros.html

--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -7,23 +7,23 @@
 
 body {
   background-color: var(--blanco);
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 /**Clases Globales**/
 .g-tituloPrincipal {
+  margin-top: 88px;
   font-size: 57px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   text-align: center;
   line-height: 4rem;
 }
-
-@media (min-width: 481px) and (max-width: 992px) {
+@media (max-width: 992px) {
   .g-tituloPrincipal {
+    margin-top: 44px;
     font-size: 36px;
   }
 }
-
 @media (max-width: 480px) {
   .g-tituloPrincipal {
     font-size: 32px;
@@ -32,9 +32,8 @@ body {
 
 .g-tituloSeccion {
   font-size: 45px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
 }
-
 @media (max-width: 992px) {
   .g-tituloSeccion {
     font-size: 28px;
@@ -43,10 +42,9 @@ body {
 
 .g-tituloCards {
   font-size: 32px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-weight: 700;
 }
-
 @media (max-width: 992px) {
   .g-tituloCards {
     font-size: 24px;
@@ -57,12 +55,12 @@ body {
 .g-button {
   color: #ffffff;
   background-color: #3FAF67;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 800;
   text-transform: uppercase;
   border: none;
   border-radius: 5px;
-  padding: .75em 3em;
+  padding: 0.75em 3em;
   margin: 5px 0;
   cursor: pointer;
 }
@@ -101,17 +99,15 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .g-coordinemos-container > * {
   margin: 15px 0;
 }
-
 .g-coordinemos-container > .g-button {
   padding-top: 8px;
 }
 
 /**Mixins y extends**/
-#introProyectos, #proyectos, #p-servicios #principalServicios, #p-servicios #arquitecturaGeneral, #p-servicios #renovar, #p-servicios #contacto, .proyecto .masProyectos {
+.proyecto .masProyectos, #p-servicios #contacto, #p-servicios #renovar, #p-servicios #arquitecturaGeneral, #p-servicios #principalServicios, #proyectos, #introProyectos {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -127,7 +123,7 @@ body {
 
 /**Nav**/
 nav .cajaNav {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 700;
   font-size: 18px;
   display: -webkit-box;
@@ -139,7 +135,6 @@ nav .cajaNav {
   -webkit-box-shadow: 4px 4px whitesmoke;
           box-shadow: 4px 4px whitesmoke;
 }
-
 nav .cajaNav .barNav {
   margin: 0 10px 0 0;
   display: -webkit-box;
@@ -157,7 +152,6 @@ nav .cajaNav .barNav {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
 }
-
 nav .cajaNav .barNav li {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -168,17 +162,14 @@ nav .cajaNav .barNav li {
   padding: 0 20px;
   height: 100%;
 }
-
 nav .cajaNav .barNav li:hover {
   cursor: pointer;
 }
-
 nav .cajaNav .barNav li a {
   text-decoration: none;
   cursor: pointer;
   color: inherit;
 }
-
 nav .cajaNav .titNav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -193,16 +184,13 @@ nav .cajaNav .titNav {
   height: auto;
   width: 348px;
 }
-
 nav .cajaNav .titNav .toggle {
   display: none;
 }
-
 nav .cajaNav .titNav img {
   width: 123px;
   height: auto;
 }
-
 nav .cajaNav .botones {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -215,20 +203,16 @@ nav .cajaNav .botones {
           align-items: center;
   width: 340px;
 }
-
 nav .cajaNav .botones a {
   text-decoration: none;
   margin: 0 40px 0 0;
 }
-
 nav .cajaNav .toggle {
   display: none;
 }
-
 nav .navB {
   display: none;
 }
-
 @media (max-width: 992px) {
   nav {
     display: -webkit-box;
@@ -252,7 +236,7 @@ nav .navB {
         -ms-flex-align: center;
             align-items: center;
     background-color: #f2ecde;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-weight: 700;
     font-size: 18px;
   }
@@ -333,12 +317,10 @@ nav .navB {
           justify-content: center;
   text-align: center;
 }
-
 #p-index #landing p {
   padding: 10px;
   margin: 20px 0;
 }
-
 #p-index #landing img {
   margin: 20px 0;
   width: 100%;
@@ -350,11 +332,9 @@ nav .navB {
 #introProyectos h2 {
   margin: 31px 0 72px 0;
 }
-
 #introProyectos p {
   margin: 20px;
 }
-
 #introProyectos .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -366,7 +346,6 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 #introProyectos .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -380,20 +359,17 @@ nav .navB {
   height: auto;
   padding: 10px;
 }
-
 #introProyectos .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #introProyectos .contenedorCards .cards {
     max-width: 256px;
   }
 }
-
 @media (max-width: 828px) {
   #introProyectos .contenedorCards {
     -webkit-box-pack: center;
@@ -406,7 +382,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #introProyectos .contenedorCards {
     display: -webkit-box;
@@ -421,19 +396,15 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #introProyectos .contenedorCards h5 {
   margin-top: 20px;
 }
-
 #introProyectos .contenedorCards .card1 {
   margin-top: 192px;
 }
-
 #introProyectos .contenedorCards .card3 {
   margin-top: 120px;
 }
-
 @media (max-width: 827px) {
   #introProyectos .contenedorCards .card1, #introProyectos .contenedorCards .card3 {
     margin-top: 0;
@@ -442,23 +413,19 @@ nav .navB {
 
 /**Proyectos**/
 #proyectos h1 {
-  margin: 98px 0 48px 0;
+  margin-bottom: 48px;
 }
-
 #proyectos p {
   max-width: 686px;
   margin-bottom: 48px;
 }
-
 #proyectos a {
   text-decoration: none;
   color: #000;
 }
-
 #proyectos a:visited {
   color: #000;
 }
-
 #proyectos .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -476,7 +443,6 @@ nav .navB {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 #proyectos .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -490,20 +456,17 @@ nav .navB {
   height: auto;
   padding: 10px;
 }
-
 #proyectos .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #proyectos .contenedorCards .cards {
     max-width: 256px;
   }
 }
-
 @media (max-width: 828px) {
   #proyectos .contenedorCards {
     -webkit-box-pack: center;
@@ -516,7 +479,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #proyectos .contenedorCards {
     display: -webkit-box;
@@ -531,30 +493,24 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #proyectos .contenedorCards h5 {
   margin: 28px 0 28px 0;
 }
-
 #proyectos .contenedorCards .card5 {
   margin-top: -70px;
 }
-
 #proyectos .contenedorCards .card1, #proyectos .contenedorCards .card4 {
   margin-top: 106px;
 }
-
 #proyectos .contenedorCards .card3, #proyectos .contenedorCards .card6 {
   margin-top: 42px;
 }
-
 #proyectos .contenedorCards .underline {
   font-size: 18px;
   font-weight: 400;
   color: #3FAF67;
   text-decoration: underline;
 }
-
 @media (max-width: 827px) {
   #proyectos .contenedorCards .cards {
     margin-top: 0;
@@ -563,9 +519,8 @@ nav .navB {
 
 /**Servicios**/
 #p-servicios #principalServicios h1 {
-  margin: 88px 0 28px 0;
+  margin-bottom: 28px;
 }
-
 #p-servicios #principalServicios img {
   width: 100%;
   height: auto;
@@ -574,29 +529,24 @@ nav .navB {
   max-height: 424px;
   margin: 30px 0 67px 0;
 }
-
 #p-servicios #principalServicios .textBox {
   margin: 26px 390px 25px 390px;
 }
-
 @media (max-width: 1310px) {
   #p-servicios #principalServicios .textBox {
     margin: 26px 200px 25px 200px;
   }
 }
-
 @media (max-width: 1040px) {
   #p-servicios #principalServicios .textBox {
     margin: 26px 100px 25px 100px;
   }
 }
-
 @media (max-width: 700px) {
   #p-servicios #principalServicios .textBox {
     margin: 26px 20px 25px 20px;
   }
 }
-
 #p-servicios #principalServicios .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -608,7 +558,6 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 #p-servicios #principalServicios .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -622,20 +571,17 @@ nav .navB {
   height: auto;
   padding: 10px;
 }
-
 #p-servicios #principalServicios .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #principalServicios .contenedorCards .cards {
     max-width: 190px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #principalServicios .contenedorCards {
     -webkit-box-pack: center;
@@ -648,7 +594,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #p-servicios #principalServicios .contenedorCards {
     display: -webkit-box;
@@ -663,27 +608,22 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor .cardImg {
   margin-bottom: 21px;
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor .card2, #p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
   margin-top: 160px;
 }
-
 @media (max-width: 828px) {
   #p-servicios #principalServicios .contenedorCards .segundoContenedor .card2, #p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
     margin-top: 0;
   }
 }
-
 @media (max-width: 551px) {
   #p-servicios #principalServicios .contenedorCards .segundoContenedor {
     -webkit-box-orient: vertical;
@@ -692,16 +632,13 @@ nav .navB {
             flex-direction: column;
   }
 }
-
 #p-servicios #arquitecturaGeneral {
   background-color: #F2ECDE;
   padding: 60px;
 }
-
 #p-servicios #arquitecturaGeneral h2 {
   margin-bottom: 56px;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -711,32 +648,27 @@ nav .navB {
           align-items: center;
   text-align: start;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
   width: 100%;
   height: auto;
   max-width: 508px;
   margin-right: 10px;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura p {
   width: 100%;
   height: auto;
   max-width: 508px;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
     max-width: 400px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
     max-width: 256px;
   }
 }
-
 @media (max-width: 600px) {
   #p-servicios #arquitecturaGeneral {
     padding: 58px 16px 64px 16px;
@@ -753,7 +685,6 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #renovar .imagen {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -766,7 +697,6 @@ nav .navB {
       flex-wrap: nowrap;
   margin-top: 48px;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -774,7 +704,6 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen img {
   max-width: 508px;
   width: 100%;
@@ -783,17 +712,14 @@ nav .navB {
      object-fit: cover;
   padding: 10px;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen :first-child {
   margin-top: 104px;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #renovar .imagen .contenedorImagen img {
     max-width: 400px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #renovar .imagen .contenedorImagen :first-child {
     margin-top: 0;
@@ -802,7 +728,6 @@ nav .navB {
     max-width: 352px;
   }
 }
-
 @media (max-width: 740px) {
   #p-servicios #renovar .imagen .contenedorImagen :first-child {
     margin-top: 0;
@@ -811,7 +736,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 600px) {
   #p-servicios #renovar .imagen {
     -webkit-box-orient: vertical;
@@ -832,28 +756,23 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #renovar .texto :first-child {
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-size: 32px;
   font-weight: 700;
   margin: 102px 0 24px 0;
 }
-
 #p-servicios #renovar .texto :last-child {
   font-size: 18px;
   max-width: 508px;
   margin-bottom: 120px;
 }
-
 #p-servicios #contacto {
   background: #F2ECDE;
 }
-
 #p-servicios #contacto :first-child {
   margin: 106px 0 11px 0;
 }
-
 #p-servicios #contacto :last-child {
   margin: 35px 0 129px 0;
 }
@@ -871,9 +790,8 @@ nav .navB {
       -ms-flex-align: center;
           align-items: center;
 }
-
 #p-nosotros #landing img {
-  margin: 20px 0;
+  margin: 50px 0;
   width: 100%;
   max-width: 1040px;
   height: auto;
@@ -893,16 +811,15 @@ footer {
 
 body {
   width: 100vw;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 .g-tituloInfo {
   font-size: 24px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-weight: 700;
   padding-bottom: 8px;
 }
-
 @media (max-width: 992px) {
   .g-tituloInfo {
     font-size: 24px;
@@ -912,9 +829,8 @@ body {
 
 .g-tituloSeccion {
   font-size: 45px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
 }
-
 @media (max-width: 992px) {
   .g-tituloSeccion {
     font-size: 28px;
@@ -924,12 +840,12 @@ body {
 .g-button {
   color: #ffffff;
   background-color: #3FAF67;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 800;
   text-transform: uppercase;
   border: none;
   border-radius: 5px;
-  padding: .75em 3em;
+  padding: 0.75em 3em;
   margin: 5px 0;
   cursor: pointer;
   max-width: 200px;
@@ -953,11 +869,9 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .g-coordinemos-container > * {
   margin: 15px 0;
 }
-
 .g-coordinemos-container > .g-button {
   padding-top: 8px;
 }
@@ -966,12 +880,10 @@ body {
   width: 100%;
   height: auto;
 }
-
 .proyecto .g-hero-img-container .g-hero-img {
   width: 100%;
   height: auto;
 }
-
 .proyecto .g-info-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -984,7 +896,6 @@ body {
   height: auto;
   padding: 10px 15vw;
 }
-
 .proyecto .g-info-container .g-info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -995,7 +906,6 @@ body {
   width: 100%;
   height: auto;
 }
-
 @media (max-width: 600px) {
   .proyecto .g-info-container .g-info {
     -webkit-box-orient: vertical;
@@ -1004,46 +914,38 @@ body {
             flex-direction: column;
   }
 }
-
 .proyecto .g-info-container .g-info .container-left {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
   padding-right: 35px;
 }
-
 .proyecto .g-info-container .g-info .container-right {
   -webkit-box-flex: 3;
       -ms-flex: 3;
           flex: 3;
 }
-
 .proyecto .g-info-container .g-info .ubicacion {
   margin: 20px 0;
 }
-
 .proyecto .g-info-container .g-info .descripcion {
   margin-bottom: 20px;
 }
-
 .proyecto .fotos {
   width: 100%;
   height: auto;
   padding: 0 15vw;
 }
-
 .proyecto .fotos > * {
   margin-bottom: 20px;
   width: 100%;
   height: auto;
 }
-
 .proyecto .masProyectos h3 {
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-size: 36px;
   margin: 76px 0 69px 0;
 }
-
 .proyecto .masProyectos .contenedorCards {
   margin-bottom: 77px;
   display: -webkit-box;
@@ -1056,7 +958,6 @@ body {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 .proyecto .masProyectos .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1070,20 +971,17 @@ body {
   height: auto;
   padding: 10px;
 }
-
 .proyecto .masProyectos .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   .proyecto .masProyectos .contenedorCards .cards {
     max-width: 270px;
   }
 }
-
 @media (max-width: 828px) {
   .proyecto .masProyectos .contenedorCards {
     -webkit-box-pack: center;
@@ -1096,7 +994,6 @@ body {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   .proyecto .masProyectos .contenedorCards {
     display: -webkit-box;
@@ -1111,19 +1008,15 @@ body {
     max-width: 328px;
   }
 }
-
 .proyecto .masProyectos .contenedorCards h5 {
   margin: 28px 0 28px 0;
 }
-
 .proyecto .masProyectos .contenedorCards .card1 {
   margin-top: 176px;
 }
-
 .proyecto .masProyectos .contenedorCards .card3 {
   margin-top: 112px;
 }
-
 @media (max-width: 767px) {
   .proyecto .masProyectos h3 {
     font-size: 28px;
@@ -1131,5 +1024,4 @@ body {
   .proyecto .masProyectos .contenedorCards .card1, .proyecto .masProyectos .contenedorCards .card3 {
     margin-top: 0;
   }
-}
-/*# sourceMappingURL=proyectos.css.map */
+}/*# sourceMappingURL=proyectos.css.map */
