--- a/css/styles.css
+++ b/css/styles.css
@@ -6,25 +6,23 @@
 
 body {
   background-color: var(--blanco);
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 /**Clases Globales**/
 .g-tituloPrincipal {
   margin-top: 88px;
   font-size: 57px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   text-align: center;
   line-height: 4rem;
 }
-
 @media (max-width: 992px) {
   .g-tituloPrincipal {
     margin-top: 44px;
     font-size: 36px;
   }
 }
-
 @media (max-width: 480px) {
   .g-tituloPrincipal {
     font-size: 32px;
@@ -33,9 +31,8 @@ body {
 
 .g-tituloSeccion {
   font-size: 45px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
 }
-
 @media (max-width: 992px) {
   .g-tituloSeccion {
     font-size: 28px;
@@ -44,10 +41,9 @@ body {
 
 .g-tituloCards {
   font-size: 32px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-weight: 700;
 }
-
 @media (max-width: 992px) {
   .g-tituloCards {
     font-size: 24px;
@@ -58,12 +54,12 @@ body {
 .g-button {
   color: #ffffff;
   background-color: #3FAF67;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 800;
   text-transform: uppercase;
   border: none;
   border-radius: 5px;
-  padding: .75em 3em;
+  padding: 0.75em 3em;
   margin: 5px 0;
   cursor: pointer;
 }
@@ -102,17 +98,15 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .g-coordinemos-container > * {
   margin: 15px 0;
 }
-
 .g-coordinemos-container > .g-button {
   padding-top: 8px;
 }
 
 /**Mixins y extends**/
-#introProyectos, #proyectos, #p-servicios #principalServicios, #p-servicios #arquitecturaGeneral, #p-servicios #renovar, #p-servicios #contacto {
+#p-servicios #contacto, #p-servicios #renovar, #p-servicios #arquitecturaGeneral, #p-servicios #principalServicios, #proyectos, #introProyectos {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -128,7 +122,7 @@ body {
 
 /**Nav**/
 nav .cajaNav {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 700;
   font-size: 18px;
   display: -webkit-box;
@@ -140,7 +134,6 @@ nav .cajaNav {
   -webkit-box-shadow: 4px 4px whitesmoke;
           box-shadow: 4px 4px whitesmoke;
 }
-
 nav .cajaNav .barNav {
   margin: 0 10px 0 0;
   display: -webkit-box;
@@ -158,7 +151,6 @@ nav .cajaNav .barNav {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
 }
-
 nav .cajaNav .barNav li {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -169,17 +161,14 @@ nav .cajaNav .barNav li {
   padding: 0 20px;
   height: 100%;
 }
-
 nav .cajaNav .barNav li:hover {
   cursor: pointer;
 }
-
 nav .cajaNav .barNav li a {
   text-decoration: none;
   cursor: pointer;
   color: inherit;
 }
-
 nav .cajaNav .titNav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -194,16 +183,13 @@ nav .cajaNav .titNav {
   height: auto;
   width: 348px;
 }
-
 nav .cajaNav .titNav .toggle {
   display: none;
 }
-
 nav .cajaNav .titNav img {
   width: 123px;
   height: auto;
 }
-
 nav .cajaNav .botones {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -216,20 +202,16 @@ nav .cajaNav .botones {
           align-items: center;
   width: 340px;
 }
-
 nav .cajaNav .botones a {
   text-decoration: none;
   margin: 0 40px 0 0;
 }
-
 nav .cajaNav .toggle {
   display: none;
 }
-
 nav .navB {
   display: none;
 }
-
 @media (max-width: 992px) {
   nav {
     display: -webkit-box;
@@ -253,7 +235,7 @@ nav .navB {
         -ms-flex-align: center;
             align-items: center;
     background-color: #f2ecde;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-weight: 700;
     font-size: 18px;
   }
@@ -334,12 +316,10 @@ nav .navB {
           justify-content: center;
   text-align: center;
 }
-
 #p-index #landing p {
   padding: 10px;
   margin: 20px 0;
 }
-
 #p-index #landing img {
   margin: 20px 0;
   width: 100%;
@@ -351,11 +331,9 @@ nav .navB {
 #introProyectos h2 {
   margin: 31px 0 72px 0;
 }
-
 #introProyectos p {
   margin: 20px;
 }
-
 #introProyectos .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -367,7 +345,6 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 #introProyectos .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -381,20 +358,17 @@ nav .navB {
   height: auto;
   padding: 10px;
 }
-
 #introProyectos .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #introProyectos .contenedorCards .cards {
     max-width: 256px;
   }
 }
-
 @media (max-width: 828px) {
   #introProyectos .contenedorCards {
     -webkit-box-pack: center;
@@ -407,7 +381,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #introProyectos .contenedorCards {
     display: -webkit-box;
@@ -422,19 +395,15 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #introProyectos .contenedorCards h5 {
   margin-top: 20px;
 }
-
 #introProyectos .contenedorCards .card1 {
   margin-top: 192px;
 }
-
 #introProyectos .contenedorCards .card3 {
   margin-top: 120px;
 }
-
 @media (max-width: 827px) {
   #introProyectos .contenedorCards .card1, #introProyectos .contenedorCards .card3 {
     margin-top: 0;
@@ -445,21 +414,17 @@ nav .navB {
 #proyectos h1 {
   margin-bottom: 48px;
 }
-
 #proyectos p {
   max-width: 686px;
   margin-bottom: 48px;
 }
-
 #proyectos a {
   text-decoration: none;
   color: #000;
 }
-
 #proyectos a:visited {
   color: #000;
 }
-
 #proyectos .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -477,7 +442,6 @@ nav .navB {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 #proyectos .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -491,20 +455,17 @@ nav .navB {
   height: auto;
   padding: 10px;
 }
-
 #proyectos .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #proyectos .contenedorCards .cards {
     max-width: 256px;
   }
 }
-
 @media (max-width: 828px) {
   #proyectos .contenedorCards {
     -webkit-box-pack: center;
@@ -517,7 +478,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #proyectos .contenedorCards {
     display: -webkit-box;
@@ -532,30 +492,24 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #proyectos .contenedorCards h5 {
   margin: 28px 0 28px 0;
 }
-
 #proyectos .contenedorCards .card5 {
   margin-top: -70px;
 }
-
 #proyectos .contenedorCards .card1, #proyectos .contenedorCards .card4 {
   margin-top: 106px;
 }
-
 #proyectos .contenedorCards .card3, #proyectos .contenedorCards .card6 {
   margin-top: 42px;
 }
-
 #proyectos .contenedorCards .underline {
   font-size: 18px;
   font-weight: 400;
   color: #3FAF67;
   text-decoration: underline;
 }
-
 @media (max-width: 827px) {
   #proyectos .contenedorCards .cards {
     margin-top: 0;
@@ -566,7 +520,6 @@ nav .navB {
 #p-servicios #principalServicios h1 {
   margin-bottom: 28px;
 }
-
 #p-servicios #principalServicios img {
   width: 100%;
   height: auto;
@@ -575,29 +528,24 @@ nav .navB {
   max-height: 424px;
   margin: 30px 0 67px 0;
 }
-
 #p-servicios #principalServicios .textBox {
   margin: 26px 390px 25px 390px;
 }
-
 @media (max-width: 1310px) {
   #p-servicios #principalServicios .textBox {
     margin: 26px 200px 25px 200px;
   }
 }
-
 @media (max-width: 1040px) {
   #p-servicios #principalServicios .textBox {
     margin: 26px 100px 25px 100px;
   }
 }
-
 @media (max-width: 700px) {
   #p-servicios #principalServicios .textBox {
     margin: 26px 20px 25px 20px;
   }
 }
-
 #p-servicios #principalServicios .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -609,7 +557,6 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 #p-servicios #principalServicios .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -623,20 +570,17 @@ nav .navB {
   height: auto;
   padding: 10px;
 }
-
 #p-servicios #principalServicios .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #principalServicios .contenedorCards .cards {
     max-width: 190px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #principalServicios .contenedorCards {
     -webkit-box-pack: center;
@@ -649,7 +593,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #p-servicios #principalServicios .contenedorCards {
     display: -webkit-box;
@@ -664,27 +607,22 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor .cardImg {
   margin-bottom: 21px;
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor .card2, #p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
   margin-top: 160px;
 }
-
 @media (max-width: 828px) {
   #p-servicios #principalServicios .contenedorCards .segundoContenedor .card2, #p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
     margin-top: 0;
   }
 }
-
 @media (max-width: 551px) {
   #p-servicios #principalServicios .contenedorCards .segundoContenedor {
     -webkit-box-orient: vertical;
@@ -693,16 +631,13 @@ nav .navB {
             flex-direction: column;
   }
 }
-
 #p-servicios #arquitecturaGeneral {
   background-color: #F2ECDE;
   padding: 60px;
 }
-
 #p-servicios #arquitecturaGeneral h2 {
   margin-bottom: 56px;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -712,32 +647,27 @@ nav .navB {
           align-items: center;
   text-align: start;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
   width: 100%;
   height: auto;
   max-width: 508px;
   margin-right: 10px;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura p {
   width: 100%;
   height: auto;
   max-width: 508px;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
     max-width: 400px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
     max-width: 256px;
   }
 }
-
 @media (max-width: 600px) {
   #p-servicios #arquitecturaGeneral {
     padding: 58px 16px 64px 16px;
@@ -754,7 +684,6 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #renovar .imagen {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -767,7 +696,6 @@ nav .navB {
       flex-wrap: nowrap;
   margin-top: 48px;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -775,7 +703,6 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen img {
   max-width: 508px;
   width: 100%;
@@ -784,17 +711,14 @@ nav .navB {
      object-fit: cover;
   padding: 10px;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen :first-child {
   margin-top: 104px;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #renovar .imagen .contenedorImagen img {
     max-width: 400px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #renovar .imagen .contenedorImagen :first-child {
     margin-top: 0;
@@ -803,7 +727,6 @@ nav .navB {
     max-width: 352px;
   }
 }
-
 @media (max-width: 740px) {
   #p-servicios #renovar .imagen .contenedorImagen :first-child {
     margin-top: 0;
@@ -812,7 +735,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 600px) {
   #p-servicios #renovar .imagen {
     -webkit-box-orient: vertical;
@@ -833,28 +755,23 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #renovar .texto :first-child {
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-size: 32px;
   font-weight: 700;
   margin: 102px 0 24px 0;
 }
-
 #p-servicios #renovar .texto :last-child {
   font-size: 18px;
   max-width: 508px;
   margin-bottom: 120px;
 }
-
 #p-servicios #contacto {
   background: #F2ECDE;
 }
-
 #p-servicios #contacto :first-child {
   margin: 106px 0 11px 0;
 }
-
 #p-servicios #contacto :last-child {
   margin: 35px 0 129px 0;
 }
@@ -872,16 +789,103 @@ nav .navB {
       -ms-flex-align: center;
           align-items: center;
 }
-
+#p-nosotros main {
+  padding: 0 20px;
+}
+#p-nosotros #landing {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+#p-nosotros #landing h1 {
+  line-height: normal;
+}
 #p-nosotros #landing img {
-  margin: 20px 0;
+  margin: 50px 0;
   width: 100%;
   max-width: 1040px;
   height: auto;
+}
+#p-nosotros #sobreNosotros {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+#p-nosotros #sobreNosotros .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin: 50px 0;
+}
+@media (max-width: 600px) {
+  #p-nosotros #sobreNosotros .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+#p-nosotros #sobreNosotros .container-left, #p-nosotros #sobreNosotros .container-right {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+@media (max-width: 600px) {
+  #p-nosotros #sobreNosotros .container-left, #p-nosotros #sobreNosotros .container-right {
+    width: 100%;
+  }
+}
+#p-nosotros #sobreNosotros .container-right p {
+  padding: 0 15%;
+}
+@media (max-width: 600px) {
+  #p-nosotros #sobreNosotros .container-right p {
+    padding: 0;
+    margin-top: 15px;
+  }
+}
+#p-nosotros #sobreNosotros .container-left img {
+  max-width: 250px;
 }
 
 /**Footer**/
 footer {
   height: 30vh;
-}
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
