--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -19,11 +19,11 @@ body {
     font-family: 'Playfair Display', serif;
     text-align: center;
     line-height: 4rem;
-    @media(max-width: 992px){
+    @media(max-width: 828px){
         margin-top: 44px;
         font-size: $headline3;
     }
-    @media(max-width:480px){
+    @media(max-width:551px){
         font-size: $headline4;
     }   
 }
@@ -31,7 +31,7 @@ body {
 .g-tituloSeccion{
     font-size: $headline2;
     font-family: 'Playfair Display', serif;
-    @media(max-width: 992px){
+    @media(max-width: 828px){
         font-size: $headline5;
     }
 }
@@ -40,7 +40,7 @@ body {
     font-size: $headline4;
     font-family: 'Playfair Display', serif;
     font-weight: 700;
-    @media(max-width: 992px){
+    @media(max-width: 828px){
         font-size: $headline6;
         font-weight: 400;
     }
@@ -56,6 +56,7 @@ body {
     border-radius: 5px;
     padding: .75em 3em;
     margin: 5px 0;
+    text-decoration: none;
     cursor: pointer;
 }
 
@@ -619,5 +620,46 @@ nav{
 /**Footer**/
 
 footer{
-    height: 30vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 248px;
+    font-size: $body3;
+    :first-child{
+        display: flex;
+        flex-direction: column;
+        img{
+            max-width: 76px;
+            width: 100%;
+            height: auto;
+            margin-bottom: 9px;
+        }
+        p{
+            line-height: 24px;
+        }
+    }
+    :nth-child(2){
+        font-size: $body2;
+        display: flex;   
+        flex-direction: column;
+        a{
+            text-decoration: none;
+            color: #000;
+            margin:12px 0 12px 0;
+        }
+    }
+    :last-child{
+        p{
+            margin-bottom: 9px;
+        }
+        :nth-child(2), :last-child{
+            font-size: $body2;
+        }
+    }
+    @media (max-width: 828px){
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 32px 0px 18px 31px;
+        height: 504px;   
+    }    
 }
